--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
     compile 'org.grails.plugins:spring-security-core:3.1.1'
     runtime 'mysql:mysql-connector-java:5.1.29'
+    compile "org.grails.plugins:iCalendar:0.6.1"
 }
 
 bootRun {
