--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -98,8 +98,13 @@ dataSource:
 environments:
     development:
         dataSource:
+            pooled: true
+            jmxExport: true
+            driverClassName: com.mysql.jdbc.Driver
+            username: root
+            password: 
             dbCreate: update
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:mysql://localhost:3306/mtv
     test:
         dataSource:
             dbCreate: update
@@ -126,3 +131,5 @@ environments:
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+server:
+  port: 9001
